--- a/views/clients.ejs
+++ b/views/clients.ejs
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Clients</title>
-</head>
-<body>
-
 <h1>Clients List</h1>
 
-<!-- Add New Client Form -->
 <h2>Add New Client</h2>
 <form action="/clients/new" method="POST">
     <input type="text" name="name" placeholder="Name" required>
@@ -36,19 +28,9 @@
 <ul>
     <% clients.forEach(client => { %>
         <li>
-            <a href="/clients/<%= client.id %>">
-                <strong><%= client.name %></strong>
-            </a>
-            |
-            <%= client.email %> |
-            <%= client.phone %> |
+            <a href="/clients/<%= client.id %>"><strong><%= client.name %></strong></a>
+            | <%= client.email %> | <%= client.phone %> |
             Status: <%= client.status %>
         </li>
     <% }) %>
 </ul>
-
-<br>
-<a href="/dashboard">Back to Dashboard</a>
-
-</body>
-</html>
