--- a/views/clients/list.ejs
+++ b/views/clients/list.ejs
@@ -109,6 +109,19 @@
             <td>
                 <% if (user && user.role !== 'user') { %>
                     <a class="view-link" href="/clients/<%= client.id %>">View</a>
+                <form 
+                    action="/clients/<%= client.id %>/delete" 
+                    method="POST" 
+                    style="display:inline;"
+                    onsubmit="return confirm('Are you sure you want to delete this client? This will delete contacts, tasks, and invoices.')"
+                >
+                    <button 
+                        type="submit"
+                        style="border:none; background:none; color:red; cursor:pointer; font-weight:bold;"
+                    >
+                        Delete
+                    </button>
+                </form>
                 <% } else { %>
                     -
                 <% } %>
